--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@ethersproject/providers": "^5.7.2",
+    "@filecoin-shipyard/lotus-client-provider-browser": "^1.1.1",
+    "@filecoin-shipyard/lotus-client-provider-nodejs": "^1.1.1",
+    "@filecoin-shipyard/lotus-client-rpc": "^1.2.0",
+    "@glif/filecoin-rpc-client": "^2.0.8",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.11.8",
@@ -12,13 +17,19 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@web3-react/core": "^6.1.9",
+    "buffer": "^6.0.3",
+    "filecoin.js": "^0.0.5-alpha",
+    "ipfs-core": "^0.18.0",
     "ipfs-http-client": "^60.0.0",
+    "ipfs-mini": "^1.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "stream": "^0.0.2",
     "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
