--- a/package.json
+++ b/package.json
@@ -13,23 +13,27 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.11.8",
+    "@pinata/sdk": "^2.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@web3-react/core": "^6.1.9",
     "buffer": "^6.0.3",
     "filecoin.js": "^0.0.5-alpha",
+    "ipfs-car": "^0.9.2",
     "ipfs-core": "^0.18.0",
     "ipfs-http-client": "^60.0.0",
     "ipfs-mini": "^1.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "stream": "^0.0.2",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
-    "web3": "^1.8.2"
+    "web3": "^1.8.2",
+    "web3.storage": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
